--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -50,6 +50,7 @@ body {
     border-radius: 15px;
     padding: 15px;
     font-size: 20px;
+    margin: 15px;
 }
 
 /* Tabla de ejercicios */
@@ -83,7 +84,6 @@ body {
     background-color: var(--color-tarjetas);
     box-shadow: 0 0 12px #5a7ba64c;
 }
-
 
 
  /* ===== PARRAFO DE LAS CARDS ===== */
